--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,280 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap');body{      margin:0;      padding:0;      background-image: url("background.png");       background-repeat: no-repeat;      background-size: cover;      background-position: center;      background-attachment: fixed;      font-family: 'Montserrat', sans-serif;}*{   box-sizing: border-box; }    .app{   height: 500px;   width: 700px;   margin:30px auto;   border-radius: 8px;   padding: 15px;  }.row{  display: flex;  flex-wrap: wrap;}.app .quiz-box{  background-color: rgba(201,152,63,0.4);  padding:30px 15px;  border-radius: 20px 20px 0px 0px;  flex-basis: 100%;  max-width: 100%;  box-shadow: inset 2px 2px rgba(0,0,0,0.1);}.app .quiz-box h4,.app .quiz-box h1{  font-size:30px;  font-weight: 400;  color:#FFFFFF;  margin:10px 0px;   text-align: center;  font-weight: normal;}.app .quiz-box h1{  text-transform: uppercase;  font-size: 50px;  font-weight: bold;  -webkit-animation: question 1.5s ease alternate infinite;  animation: question 1.5s ease alternate infinite;}@-webkit-keyframes question{  0%{      -webkit-transform: scale(0.8);      transform: scale(0.8)  }  100%{       -webkit-transform: scale(1);       transform: scale(1);  }}@keyframes question{   0%{      -webkit-transform: scale(0.8);      transform: scale(0.8)  }  100%{        -webkit-transform: scale(1);        transform: scale(1)  }}.app .score-card{    background-color: rgba(201,152,63);    flex-basis: 100%;    max-width: 100%;    padding:5px 10px;    color:#FCF068;    font-size:20px;    font-weight: 700;     display: flex;    flex-wrap: wrap;    justify-content: space-around;    }.app .option-box{  background-color: rgba(201,152,63,0.4);  border-radius: 0px 0px 20px 20px;  min-height:400px;  flex-basis: 100%;  max-width: 100%;  display: flex;  padding:15px;  flex-wrap:wrap;   box-shadow: inset -2px -2px rgba(0,0,0,0.1);    justify-content: center;  align-content: flex-start;}.app .option-box img{   width: 100%;   display: block;}.app .option-box button{     flex-basis: calc(50% - 30px);     max-width:  calc(50% - 30px);     margin:15px;      border:0;     padding:0;     border-radius:4px;     overflow: hidden;     cursor: pointer;     animation: button 1s ease;  }@keyframes button{  0%{transform: scale(0.5);opacity:0 }  100%{transform: scale(1);opacity: 1}} .app .option-box button {  position: relative;}.app .option-box button.errada span{    position: absolute;    left:0px;    background-color: red;    top:0px;    font-size:16px;     color:#ffffff;    padding:5px;     width:100%;     z-index:1;    animation: alertErrada 1s ease;   }@keyframes alertErrada{  0%{transform: translateY(-100%);}  50%{transform: translateY(100%);}  100%{transform: translateY(0%);}}.app .option-box button.errada img{    animation: imgErrada 1s ease;}@keyframes imgErrada{  0%,40%,70%{       transform: translateX(0px) scale(.8);   }  15%,55%{       transform: translateX(10px) scale(.8);   }  30%,80%{       transform: translateX(-10px) scale(.8);   }}.app .option-box button.correta span{    position: absolute;    left:0px;    background-color: #57E964;    top:0px;    font-size:16px;     color:#ffffff;    padding:5px;     width:100%;     z-index:1;    animation: alertCorreta 1s ease;   }@keyframes alertCorreta{  0%{transform: translateY(100%);}  100%{transform: translateY(0%);}}.app .option-box button.correta img{    animation: imgCorreta 1s ease;}@keyframes imgCorreta{  0%{       transform: scale(1);   }  50%{       transform: scale(0.8);   }  100%{       transform: scale(1);   }  }.app .option-box button.hide{  animation: buttonHide 1s ease forwards;}@keyframes buttonHide{  0%{       transform: scale(1);  }  100%{       transform: scale(0);  }}.app .option-box h1 span{     font-size: 20px;     color: #FF9800;     display: inline-block;     padding: 10px 0px;}.app .option-box h1{  font-size:30px;  color:#ffffff;  margin: 0px;  text-align: center;  animation: quiOver 1s ease; }@keyframes quizOver{   0%{       transform: scale(.5);opacity:0   }  100%{       transform: scale(1);opacity: 1  }}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap');
+body{
+      margin:0;
+      padding:0;
+      display:flex;
+      justify-content:center;
+      align-items: center;
+      min-height: 100vh;
+      background-image: url("background.png"); 
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      font-family: 'Montserrat', sans-serif;
+} 
+  *{
+     box-sizing: border-box; 
+} 
+
+.app{
+   
+   /*height: 600px;*/
+   /*position: relative;  INSERIDO 26/04/2021*/
+   max-width: 700px; 
+   /*display: flex;  INSERIDO 26/04/2021*/
+   /*justify-content: space-between;  INSERIDO 26/04/2021*/
+   /*flex-wrap: wrap;  INSERIDO 26/04/2021 */
+   margin: 60px auto;
+   backdrop-filter:blur(10px); /*INSERIDO 27-04-2021*/
+   background-color: rgba(91, 128, 86, 0.5);
+   padding: 10px 50px 50px 50px;
+   border-radius: 50px;
+   border: 2px solid #4BF1FA;
+   box-shadow: 5px 10px 1px #4BF1FA;
+   
+}
+
+.row{
+  display: grid;
+  flex-wrap: wrap;
+}
+
+.app .quiz-box{
+  
+  flex-basis: 100%;
+  max-width: 100%;
+  
+}
+
+.app .quiz-box h4,
+.app .quiz-box h1{
+  font-size:30px;
+  font-weight: 400;
+  color:#FFFFFF;
+  margin:10px 0px; 
+  text-align: center;
+  font-weight: bold;
+}
+
+.app .quiz-box h1{
+  margin: 0;
+  padding: 0;    
+  text-transform: uppercase;
+  font-size: 8vw;
+  font-weight: bold;
+  -webkit-animation: question 1.5s ease alternate infinite;
+  animation: question 1.5s ease alternate infinite;
+  background: url(C.jpg);
+  background-size: cover;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+@-webkit-keyframes question{
+  0%{
+      -webkit-transform: scale(0.8);
+      transform: scale(0.8)
+  }
+  100%{
+       -webkit-transform: scale(1);
+       transform: scale(1);
+  }
+}
+@keyframes question{
+   0%{
+      -webkit-transform: scale(0.8);
+      transform: scale(0.8)
+  }
+  100%{
+        -webkit-transform: scale(1);
+        transform: scale(1)
+
+  }
+}
+
+ .app .score-card{
+    flex-basis: 100%;
+    max-width: 100%;
+    padding:5px 10px;
+    color:#FCF068;
+    font-size:20px;
+    font-weight: 700; 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .app .option-box{
+  min-height:500px;
+  flex-basis: 100%;
+  max-width: 100%;
+  display: flex;
+  padding:15px 15px;
+  flex-wrap:wrap; 
+  justify-content: center;
+  align-content: flex-start;
+}
+/*CAMPO DAS IMAGENS*/
+.app .option-box img{
+   width: 100%;
+   display: block;
+}
+/*BOTÕES DAS IMAGENS*/
+.app .option-box button{
+     position: relative; /*ADICIONADO 27/04/2021*/
+     top: 10px;/*ADICIONADO 27/04/2021*/
+     left: 10px;/*ADICIONADO 27/04/2021*/
+     backdrop-filter: blur(20px);/*ADICIONADO 27/04/2021*/
+     flex-basis: calc(100% - 20px); /* MODIFICADO 27/04/2021, ERA flex-basis */
+     max-width:  calc(100% - 20px); /*MODIFICADO 27/04/2021, ERA max-width*/
+     z-index: 1; /*ADICIONADO 27/04/2021*/
+     display: flex; /*ADICIONADO 27/04/2021*/
+     justify-content: center; /*ADICIONADO 27/04/2021*/
+     align-items: center; /*ADICIONADO 27/04/2021*/
+     margin:10px;
+     border:0;
+     padding:0;
+     border-radius:4px;
+     overflow: hidden;
+     cursor: pointer;
+     animation: button 1s ease;  
+}
+@media screen and (max-width: 700px){ /* SUBTRAI 700 - 8 = 692*/
+ 
+  .app {
+  	position: relative;
+    width:100%;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+}
+/*
+@media screen and (max-width: 350px){/* SUBTRAI 700 - 8 = 692*/
+ /* .app {
+    width:40%;
+    
+  }*/
+
+/*CAMPO DAS IMAGENS, TESTAR/TESTEI ESTE BLOCO, COM OS TUTORIAIS SALVOS*/
+@keyframes button{
+  0%{transform: scale(0.5);opacity:0 }
+  100%{transform: scale(1);opacity: 1}
+}
+.app .option-box button {
+  position: relative;
+}
+.app .option-box button.errada span{
+    position: absolute;
+    left:0px;
+    background-color: red;
+    top:0px;
+    font-size:16px; 
+    color:#ffffff;
+    padding:5px; 
+    width:100%; 
+    z-index:1;
+    animation: alertErrada 1s ease;   
+}
+
+@keyframes alertErrada{
+  0%{transform: translateY(-100%);}
+  50%{transform: translateY(100%);}
+  100%{transform: translateY(0%);}
+}
+
+.app .option-box button.errada img{
+    animation: imgErrada 1s ease;
+}
+
+@keyframes imgErrada{
+  0%,40%,70%{
+       transform: translateX(0px) scale(.8); 
+  }
+  15%,55%{
+       transform: translateX(10px) scale(.8); 
+  }
+  30%,80%{
+       transform: translateX(-10px) scale(.8); 
+  }
+}
+
+.app .option-box button.correta span{
+    position: absolute;
+    left:0px;
+    background-color: #57E964;
+    top:0px;
+    font-size:16px; 
+    color:#ffffff;
+    padding:5px; 
+    width:100%; 
+    z-index:1;
+    animation: alertCorreta 1s ease;   
+}
+
+@keyframes alertCorreta{
+  0%{transform: translateY(100%);}
+  100%{transform: translateY(0%);}
+}
+
+
+.app .option-box button.correta img{
+    animation: imgCorreta 1s ease;
+}
+
+@keyframes imgCorreta{
+  0%{
+       transform: scale(1); 
+  }
+  50%{
+       transform: scale(0.8); 
+  }
+  100%{
+       transform: scale(1); 
+  }
+  
+}
+
+.app .option-box button.hide{
+  animation: buttonHide 1s ease forwards;
+
+}
+
+@keyframes buttonHide{
+  0%{
+       transform: scale(1);
+  }
+  100%{
+       transform: scale(0);
+  }
+}
+.app .option-box h1 span{
+     font-size: 20px;
+     color: #FF9800;
+     display: inline-block;
+     padding: 10px 0px;
+
+}
+.app .option-box h1{
+  font-size:30px;
+  color:#ffffff;
+  margin: 0px;
+  text-align: center;
+  animation: quiOver 1s ease; 
+}
+
+@keyframes quizOver{
+   0%{
+       transform: scale(.5);opacity:0 
+  }
+  100%{
+       transform: scale(1);opacity: 1
+  }
+}
+
+
+ 
+
+
