--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,13 @@ body{
    background: linear-gradient(10deg, rgba(180,123,58,0) 0%, rgba(155,85,16,0) 1%, rgba(219,132,10,0) 10%);
    /*background: rgba(255, 255, 255, 0.2);/*MODIFICADO 30-04-2021*/
    padding: 10px 50px 50px 50px;
-   border-radius: 20px;
-   border: 2px solid rgba(75,241,250,1);
+   border-radius: 50px;
+   /*border: 2px solid rgba(75,241,250,1); 29-05-2021*/
    border-top: 2px solid rgba(75,241,250,1);
-   border-left: 2px solid rgba(75,241,250,1);  
-   box-shadow: 0 15px 25px rgba(75,241,250,1);
+   border-left: 2px solid rgba(75,241,250,1);
+   border: 2px solid #4BF1FA;
+   box-shadow: 5px 10px 1px #4BF1FA;   
+   /*box-shadow: 0 15px 25px rgba(75,241,250,1); 29-05-2021*/
    
 }
 
@@ -298,6 +300,7 @@ body{
        transform: scale(1);opacity: 1
   }
 }
+
 
 
  
